--- a/wiki/KeyboardIssues.wiki
+++ b/wiki/KeyboardIssues.wiki
@@ -3,11 +3,9 @@
 
 = Introduction =
 
-There is some known issues with Flash movies that uses keyboard (games). While this is not an issue for most GUIs, some of GUI movies can benefit from WM_KEYDOWN/WM_KEYUP processing. WM_CHAR processing (passwords, chats, etc) is working nicely.
+There is some known issues with Flash movies that uses keyboard (games). But our internal tests shows keyboard works ok.
 
 
 = Details =
-
-Problem is - IOleInPlaceObjectWindowless::OnWindowMessage() returns S_FALSE on WM_KEYDOWN and WM_KEYUP messages and skips processing of them in Flash movies.
 
 Any input on this would be appreciated.
