--- a/wiki/ToDo.wiki
+++ b/wiki/ToDo.wiki
@@ -8,5 +8,5 @@ Some thoughts about library improvements.
 
 = Details =
 
-  # FSCommand() events handling is not yet implemented.
+  # ~~FSCommand() events handling is not yet implemented.~~
   # Sound enabled/disabled control is not yet implemented.
